# langchain_data_agent

./: .env.example  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
course/: DATABASE_SETUP.md  LAB_EXERCISES.md  STUDENT_QUICKSTART.md  SYLLABUS.md
data/: Ch07_SalesCo7777.db  small-library2.db  tiny-college2.db  university-db.sql  university.db
docs/: CONFIGURATION.md  VISUALIZATION.md
scripts/: create_mysql_students.py  create_students.py  generate_diagrams.py  seed_mysql_chinook.py  seed_mysql_from_sqlite.py  setup_sqlite_chinook.py  setup_sqlite_university.py
src/data_agent/: agent.py  config.py  config_loader.py  graph.py
src/data_agent/adapters/: factory.py
src/data_agent/cli/: app.py  output.py
src/data_agent/config/: adventure_works.yaml  adventure_works.yaml.bak  amex.yaml  chinook.yaml  contoso.yaml  multi_database.yaml  pagila.yaml  university.yaml
src/data_agent/config/schema/: agent_config.schema.json
src/data_agent/executors/: __init__.py  azure_sessions.py  base.py  local.py
src/data_agent/llm/: __init__.py  base.py  github_provider.py  openai_provider.py
src/data_agent/models/: outputs.py  state.py
src/data_agent/nodes/: data_nodes.py  response.py  visualization.py
src/data_agent/prompts/: __init__.py  defaults.py
src/data_agent/ui/: app.py
src/data_agent/validators/: sql_validator.py
